--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "youtube-clone",
   "version": "1.0.0",
   "description": "great page",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/byeon2261/youtube-clone.git"
+  },
+  "scripts": {
+    "start": "node index.js"
   },
   "author": "G.H. Byeon",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/byeon2261/youtube-clone/issues"
   },
-  "homepage": "https://github.com/byeon2261/youtube-clone#readme"
+  "homepage": "https://github.com/byeon2261/youtube-clone#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
