--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "homepage": "https://github.com/byeon2261/youtube-clone#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2"
   }
 }
