--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/byeon2261/youtube-clone.git"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "author": "G.H. Byeon",
   "license": "MIT",
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/byeon2261/youtube-clone#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.2.1",
+    "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
