--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "homepage": "https://github.com/byeon2261/youtube-clone#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongo-store": "^0.0.2",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
