--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongo-store": "^0.0.2",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
