--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/byeon2261/youtube-clone#readme",
   "dependencies": {
+    "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
