--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "regenerator-runtime": "^0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
