--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/byeon2261/youtube-clone#readme",
   "dependencies": {
+    "@ffmpeg/core": "^0.12.3",
+    "@ffmpeg/ffmpeg": "^0.12.6",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
