--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^2.0.20",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
