--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/byeon2261/youtube-clone#readme",
   "dependencies": {
-    "@ffmpeg/core": "^0.12.3",
-    "@ffmpeg/ffmpeg": "^0.12.6",
+    "@ffmpeg/core": "^0.8.5",
+    "@ffmpeg/ffmpeg": "^0.9.7",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1",
+    "npm": "^10.2.5",
     "pug": "^3.0.2",
     "regenerator-runtime": "^0.14.0"
   },
