--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^21.2.0",
     "node-fetch": "^2.6.1",
     "npm": "^10.2.5",
     "pug": "^3.0.2",
